gateway-api/production/gateway/nginx/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx
  namespace: nginx-gateway
  annotations:
    cert-manager.io/cluster-issuer: gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "www-aimhighergg-com"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "www-aimhighergg-com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: aimhighergg-tls
      allowedRoutes:
        namespaces:
          from: Same
